--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Kişisel Web Sitem</h1>
     <p>sercanbaris.com</p>
     <p>Olur Böyle şeyler</p>
-<a href="iletisim.html" target="_blank" rel="noopener noreferrer"></a>
+<a href="iletisim.html" target="_blank" rel="noopener noreferrer">Link</a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
  
 </body>
